# acsp

./: .gitignore  AGENTS.md  ALGORITHM_SIMPLIFICATION.md  CHANGELOG_AI.md  CITATION.cff  FINE_SCALE_LIMITS_REPORT.md  GAP_PATCH_VALIDATION_PROTOCOL.md  LICENSE  METHODS_PAPER_PLAN.md  Procfile  README.md  RESEARCH_POSITIONING.md  SURVEY_PLANNING_POLICY.md  acsp_discover.py  action.yml  audit_random_validation_stability.py  benchmark_general_random_taxa_regions.py  benchmark_izu_random_taxa.py  benchmark_occupancy_geometry_comparators.py  benchmark_occupancy_geometry_incremental_information.py  benchmark_occupancy_topology_discrimination.py  benchmark_random_species_models.py  benchmark_random_taxa_contrast.py  benchmark_random_taxa_occupancy_geometry.py  benchmark_random_taxa_occupancy_geometry_direct.py  benchmark_random_taxa_occupancy_geometry_direct_v2.py  benchmark_random_taxa_occupancy_geometry_v2.py  export_odsp_benchmark_folds.py  export_standard_baseline_folds.py  finalize_occupancy_geometry_confirmation.py  gbif_fieldmap_builder_app.py  pyproject.toml  requirements.txt  run_random_taxa_occupancy_geometry.py  run_standard_baseline_benchmark.py  test_acsp_cli.py  test_acsp_discover.py  test_acsp_package.py  test_area_selection.py  test_automatic_hierarchy.py  (+29 more)
.devcontainer/: devcontainer.json
acsp/: __init__.py  area_selection.py  chelsa_sampling.py  claims.py  cli.py  comparator_benchmark.py  comparator_export.py  contrast.py  contrast_benchmark.py  decision_baselines.py  discrimination.py  environment_sampling.py  field_calibration.py  field_validation.py  sdm.py  (+15 more)
(+71 files in other folders)
