[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acsp-survey"
version = "0.1.0"
description = "Adaptive candidate prioritization helpers for field-survey planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=1.5", "numpy>=1.23"]

[tool.setuptools.packages.find]
include = ["acsp*"]
